@@ -1,0 +1,30 @@
+debian/*.xpm                            usr/share/pixmaps/
+debian/locale.conf                      etc/gdm
+debian/Xsession                         etc/gdm
+debian/debian-moreblue                  usr/share/gdm/themes
+debian/tmp/etc/dm
+debian/tmp/etc/gdm/Init
+debian/tmp/etc/gdm/PreSession
+debian/tmp/etc/gdm/PostSession
+debian/tmp/etc/gdm/gdm.conf
+debian/tmp/etc/gdm/XKeepsCrashing
+debian/tmp/etc/gdm/Xsession
+debian/tmp/etc/gdm/PostLogin
+debian/tmp/etc/gdm/modules
+debian/tmp/etc/pam.d/gdm
+debian/tmp/usr/bin
+debian/tmp/usr/lib/gdm
+debian/tmp/usr/lib/gtk-2.0/modules/*.so
+debian/tmp/usr/sbin/gdmsetup
+debian/tmp/usr/sbin/gdm-binary
+debian/tmp/usr/share/applications
+debian/tmp/usr/share/gdm/themes
+debian/tmp/usr/share/gdm/defaults.conf
+debian/tmp/usr/share/gdm/BuiltInSessions
+debian/tmp/usr/share/gdm/*.glade
+debian/tmp/usr/share/gnome/help/gdm
+debian/tmp/usr/share/icons/hicolor
+debian/tmp/usr/share/locale
+debian/tmp/usr/share/man
+debian/tmp/usr/share/omf/gdm
+debian/tmp/usr/share/pixmaps
