@@ -1,0 +1,2 @@
+debian/*.1
+debian/*.8
